Wed Sep 28 14:35:26 2005  Simon McQueen  <sm@prismtech.com>

        * tao/WrongTransaction.pidl:

          Changed generation instructions to include use of -SS.

        * tao/WrongTransactionS.h:

          Regenerated using -SS.

        * tao/WrongTransactionS.inl:

          Removed file.

Tue Sep 27 18:23:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/POA/Single_Threaded_POA/Single_Threaded_POA.cpp:
          Emulated exception fix

Mon Sep 26 14:19:42 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/Makefile.am:

	  Regenerated.

	* orbsvcs/orbsvcs/DsLogAdmin.mpc:

	  Added "Log/LogStore.h" to Header_Files in the DsLogAdmin_Serv
	  project.

Mon Sep 26 09:47:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Scheduler_Factory.cpp:
          Wchar fix

        * orbsvcs/orbsvcs/RTEvent.mpc:
        * orbsvcs/orbsvcs/RTEvent_Skel.mpc:
          Added export files to the header section so that they get copied
          on install

Mon Sep 26 09:30:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/Event_Service/Event_Service.cpp:
          Corrected the way we check whether we should create a persistent POA
          or not.

Mon Sep 26 07:34:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_operation/upcall_command_ss.cpp:
          Added ACE_CHECK generation and fixed some layout issues

Sun Sep 25 21:33:41 2005  Bala Natarajan  <bala_natarajan at symantec dot com>

	* tao/Transport_Cache_Manager.cpp:

	  Cosmetic check, which seems to help some builds.

Sat Sep 24 11:37:37 2005  Balachandran Natarajan  <bala_natarajan at symantec dot com>

	* tao/default_client.cpp:

	  Changed the default value of use_cleanup_options_ switch to
	  false. This should address performance and thread_pool latency
	  test failures in our daily scoreboard.

Fri Sep 23 12:17:29 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
